# reddit-scraper

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/: DONOTRUNTHISFILE.py
src/reddit_scraper/: __init__.py  database.py  entry.py  get_credentials.py  get_posts.py  main.py  skeleton.py
tests/: conftest.py  test_skeleton.py
