[build-system]
requires = ["setuptools>=80.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-scraper"
dynamic = ["version"]
authors = [
    { "name" = "Username0103", "email" = "Username0103@users.noreply.github.com" },
]
description = "Scrapes reddit to add to an SQLite database"
readme = "README.md"
requires-python = ">=3.10"
keywords = [

]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Topic :: Utilities",
]
dependencies = [
    "praw~=7.8.1",
    "peewee~=3.18.1 ",
    "platformdirs~=4.3.7",
]

[project.urls]
homepage = "https://github.com/Username0103/reddit-scraper "
issues = "https://github.com/Username0103/reddit-scraper/issues"

[project.scripts]
reddit-scraper = "reddit_scraper.entry:run"
rdscp = "reddit_scraper.entry:run"

